2011-03-11  Andrey Kosyakov  <caseq@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: resource load cancellation is reported to console as an error
        https://bugs.webkit.org/show_bug.cgi?id=55764

        - mark interruptionForPolicyChangeError as cancellation
        - do not log resource cancelation as an error
        - always push resource to front-end before console message, so front-end can use resource info while formatting message.

        * inspector/InspectorConsoleAgent.cpp:
        (WebCore::InspectorConsoleAgent::didFailLoading):
        * inspector/InspectorInstrumentation.cpp:
        (WebCore::InspectorInstrumentation::didReceiveResourceResponseImpl):
        (WebCore::InspectorInstrumentation::didFailLoadingImpl):
        * loader/MainResourceLoader.cpp:
        (WebCore::MainResourceLoader::stopLoadingForPolicyChange):

2011-03-11  Andrey Kosyakov  <caseq@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: resource load cancellation is reported to console as an error
        https://bugs.webkit.org/show_bug.cgi?id=55764

        * http/tests/inspector/console-resource-errors-expected.txt:
        * http/tests/inspector/console-resource-errors.html: Added test for lack of console messages during policy change (at download)
        * http/tests/inspector/console-xhr-logging-expected.txt:
        * http/tests/inspector/console-xhr-logging.html: Added test for reporting of cross-origin XHR errors.
        * http/tests/inspector/resources/empty.zip: Added.


Canonical link: https://commits.webkit.org/70718@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80832 268f45cc-cd09-0410-ab3c-d52691b4dbfc