Source/WebCore/inspector/InspectorConsoleAgent.cpp
@@ -205,7 +205,8 @@ void InspectorConsoleAgent::didFailLoading(unsigned long identifier, const Resou
 {
     if (!m_inspectorAgent->enabled())
         return;
-
+    if (error.isCancellation()) // Report failures only.
+        return;
     String message = "Failed to load resource";
     if (!error.localizedDescription().isEmpty())
         message += ": " + error.localizedDescription();
